--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
 	"dependencies": {
 		"express": "^5.0.0-alpha.2",
 		"mongodb": "^2.2.5",
-		"mongoose": "^4.5.7",
+		"mongoose": "^5.4.15",
 		"cors": "^2.8.1",
-		"body-parser": "^1.15.2"
+		"body-parser": "^1.15.2",
+    "dns": ""
 	},
 	"engines": {
 		"node": "4.4.5"
